vlib/v/checker/tests/no_main_println_err.out
vlib/v/checker/tests/no_main_println_err.vv:1:5: error: too few arguments in call to `println` (0 instead of 1)
    1 |     println()
      |     ~~~~~~~~~
